[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rete-engine"
version = "0.1.0"
description = "Pattern-matched inference engine with Rete algorithm"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.4.0",
    "networkx>=2.6.0", 
    "pillow>=8.0.0",
]
dev = [
    "pytest>=6.0.0",
    "sphinx>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/rete-engine"
"Bug Tracker" = "https://github.com/yourusername/rete-engine/issues"